--- a/f1tnr-app/src-tauri/Cargo.toml
+++ b/f1tnr-app/src-tauri/Cargo.toml
@@ -18,9 +18,14 @@ tauri-build = { version = "1.5.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.6.1", features = [] }
-tokio = "1.36.0"
+tokio = { version = "1.36.0", features = ["net"] }
 httparse = "1.8.0"
 rustls = "0.23.4"
+futures = "0.3.30"
+webpki-roots = "0.26.1"
+tokio-rustls = "0.26.0"
+chrono = "0.4.35"
+unicode-segmentation = "1.11.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
