--- a/f1tnr-app/src-tauri/Cargo.toml
+++ b/f1tnr-app/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.1", features = [] }
+tauri = { version = "1.6.1", features = ["dialog-all"] }
 tokio = { version = "1.36.0", features = ["net"] }
 httparse = "1.8.0"
 rustls = "0.23.4"
