--- a/f1tnr-app/src-tauri/Cargo.toml
+++ b/f1tnr-app/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.1", features = ["dialog-all"] }
+tauri = { version = "1.6.1", features = [ "fs-all", "dialog-all"] }
 tokio = { version = "1.36.0", features = ["net"] }
 httparse = "1.8.0"
 rustls = "0.23.4"
@@ -26,6 +26,7 @@ webpki-roots = "0.26.1"
 tokio-rustls = "0.26.0"
 chrono = "0.4.35"
 unicode-segmentation = "1.11.0"
+base64 = "0.22.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
