--- a/f1tnr-app/package.json
+++ b/f1tnr-app/package.json
@@ -30,6 +30,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "shadcn-ui": "^0.8.0",
     "table": "^6.8.2",
     "tailwind-merge": "^2.2.2",
