--- a/f1tnr-app/src-tauri/Cargo.toml
+++ b/f1tnr-app/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.1", features = [ "fs-all", "dialog-all"] }
+tauri = { version = "1.6.1", features = [ "http-all", "fs-all", "dialog-all"] }
 tokio = { version = "1.36.0", features = ["net"] }
 httparse = "1.8.0"
 rustls = "0.23.4"
@@ -32,4 +32,5 @@ base64 = "0.22.0"
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
+default = ["custom-protocol"]
 custom-protocol = [ "tauri/custom-protocol" ]
