--- a/f1tnr-app/package.json
+++ b/f1tnr-app/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-table": "^8.15.3",
     "@tauri-apps/api": "^1.5.3",
     "add": "^2.0.6",
+    "cargo": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
