--- a/f1tnr-app/src-tauri/Cargo.toml
+++ b/f1tnr-app/src-tauri/Cargo.toml
@@ -24,6 +24,9 @@ webpki-roots = "0.26.1"
 tokio-rustls = "0.26.0"
 chrono = "0.4.35"
 tokio-tungstenite = "*"
+notify = "6.1.1"
+tokio-stream = "0.1.15"
+serde = "1.0.201"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
