--- a/async_net_engine/AsyncNetEngine/Cargo.toml
+++ b/async_net_engine/AsyncNetEngine/Cargo.toml
@@ -13,3 +13,4 @@ futures = "0.3.30"
 webpki-roots = "0.26.1"
 tokio-rustls = "0.26.0"
 chrono = "0.4.35"
+fs4 = { version = "0.8", features = ["tokio"] }
