--- a/f1tnr-app/package.json
+++ b/f1tnr-app/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@million/lint": "^1.0.0-rc.26",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -20,12 +21,14 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.15.3",
+    "@tanstack/react-virtual": "^3.5.1",
     "@tauri-apps/api": "^1.5.3",
     "add": "^2.0.6",
     "cargo": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "highlight.js": "^11.9.0",
     "install": "^0.13.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
@@ -33,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-window": "^1.8.10",
     "shadcn-ui": "^0.8.0",
     "table": "^6.8.2",
     "tailwind-merge": "^2.2.2",
@@ -44,6 +48,7 @@
     "@types/node": "^20.12.6",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
