--- a/f1tnr-app/src-tauri/Cargo.toml
+++ b/f1tnr-app/src-tauri/Cargo.toml
@@ -18,15 +18,13 @@ tauri-build = { version = "1.5.1", features = [] }
 tauri = { version = "1.6.1", features = [ "http-all", "fs-all", "dialog-all"] }
 tokio = { version = "1.36.0", features = ["net"] }
 httparse = "1.8.0"
-rustls = "0.23.4"
 futures = "0.3.30"
-webpki-roots = "0.26.1"
-tokio-rustls = "0.26.0"
-chrono = "0.4.35"
-tokio-tungstenite = "*"
-notify = "6.1.1"
 tokio-stream = "0.1.15"
 serde = "1.0.201"
+fs4 = { version = "0.8.3", features = ["tokio"] }
+tokio-tungstenite = "0.23.0"
+memory-stats = "1.1.0"
+serde_json = "1.0.117"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
