--- a/async_net_engine/AsyncNetEngine/Cargo.toml
+++ b/async_net_engine/AsyncNetEngine/Cargo.toml
@@ -14,3 +14,4 @@ webpki-roots = "0.26.1"
 tokio-rustls = "0.26.0"
 chrono = "0.4.35"
 fs4 = { version = "0.8", features = ["tokio"] }
+tokio-tungstenite = "*"
